# SimulatorROS2

./: .gitignore  README.md  README_v1.md  justfile  requirements.txt
additional files/: gui.config
src/example/example/: control.py
src/models_pkg/cam_birdeye_REC/: model.sdf
src/models_pkg/camera/: model.sdf
src/models_pkg/camera_follow/: model.sdf
src/models_pkg/car_body/: model.sdf
src/models_pkg/chassis/: model.sdf
src/models_pkg/crosswalk_sign/: model.sdf
src/models_pkg/crosswalk_sign/meshes/: pedestrian_sign.dae
src/models_pkg/enter_highway_sign/: model.sdf
src/models_pkg/enter_highway_sign/meshes/: enter_highway_sign.dae
src/models_pkg/leave_highway_sign/: model.sdf
src/models_pkg/leave_highway_sign/meshes/: leave_highway_sign.dae
src/models_pkg/oneway_sign/: model.sdf
src/models_pkg/oneway_sign/meshes/: oneway_sign.dae
src/models_pkg/p_alpha_d/: model.sdf
src/models_pkg/p_alpha_s/: model.sdf
src/models_pkg/p_beta_d/: model.sdf
src/models_pkg/p_beta_s/: model.sdf
src/models_pkg/p_gamma_d/: model.sdf
src/models_pkg/p_gamma_s/: model.sdf
src/models_pkg/p_organizing_d/: model.sdf
src/models_pkg/p_organizing_s/: model.sdf
src/models_pkg/parking_sign/: model.sdf
src/models_pkg/parking_sign/meshes/: parking_sign.dae
src/models_pkg/pedestrian_object/: model.sdf
src/models_pkg/priority_sign/: model.sdf
src/models_pkg/priority_sign/meshes/: priority_sign.dae
src/models_pkg/prohibited_sign/: model.sdf
src/models_pkg/prohibited_sign/meshes/: notallowed_sign.dae
src/models_pkg/ramp/: model.sdf
src/models_pkg/ramp/meshes/: ramp.dae
src/models_pkg/rcCar_assembly/: model.sdf
src/models_pkg/rcCar_assembly_REC/: model.sdf
src/models_pkg/rcCar_assembly_obstacle/: model.sdf
src/models_pkg/roadblock/: model.sdf
src/models_pkg/roadblock/meshes/: roadblock.dae
src/models_pkg/roundabout_sign/: model.sdf
src/models_pkg/roundabout_sign/meshes/: roundabout_sign.dae
src/models_pkg/separator/: model.sdf
src/models_pkg/steering_column/: model.sdf
src/models_pkg/stop_sign/: model.sdf
src/models_pkg/track/: model.sdf
src/models_pkg/traffic_light/: model.sdf
src/models_pkg/wheel_left/: model.sdf
src/models_pkg/wheel_right/: model.sdf
src/oak_mono_converter/: package.xml  setup.cfg  setup.py
src/oak_mono_converter/oak_mono_converter/: mono_converter_node.py
src/plugins_pkgs/bno055_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/bno055_plugin/include/: bno055_plugin.hpp
src/plugins_pkgs/bno055_plugin/src/: bno055_plugin.cpp
src/plugins_pkgs/car_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/car_plugin/include/: carlikerobot.hpp  carlikerobot_ros_plugin.hpp
src/plugins_pkgs/car_plugin/src/: carlikerobot.cpp  carlikerobot_ros_plugin.cpp
src/plugins_pkgs/gps_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/gps_plugin/include/: gps_plugin.hpp
src/plugins_pkgs/gps_plugin/src/: gps_plugin.cpp
src/plugins_pkgs/pedestrian_object_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/pedestrian_object_plugin/include/: geometric_point.h  pedestrian_object_plugin.h
src/plugins_pkgs/pedestrian_object_plugin/src/: geometric_point.cpp  pedestrian_object_plugin.cpp
src/plugins_pkgs/traffic_light_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/traffic_light_plugin/include/: traffic_light_plugin.hpp
src/plugins_pkgs/traffic_light_plugin/src/: traffic_light_plugin.cpp
src/sim_pkg/launch/: bridge.launch  car_only.launch  gazebo.launch  map_with_car.launch  map_with_car_light.launch
src/sim_pkg/launch/sublaunchers/: car.launch  car_REC.launch  crosswalk_signs.launch  enter_highway_signs.launch  leave_highway_signs.launch  members.launch  obstacle_car.launch  oneway_signs.launch  parking_signs.launch  pedestrian_objects.launch  pointcloud.launch  priority_signs.launch  prohibited_signs.launch  ramp.launch  roadblock.launch  roundabout_signs.launch  stop_signs.launch  traffic_lights.launch
src/sim_pkg/worlds/: car_only.world  world.world  world_with_separators.world
src/traffic_light_pkg/traffic_light_pkg/: tl_talker.py
