<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oak_mono_converter</name>
  <version>0.1.0</version>
  <description>Converts OAK-D simulated RGB mono cameras to grayscale mono8</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
