<?xml version="1.0"?>

<package format="2">

  <name>traffic_light_plugin</name>
  <version>1.0.0</version>
  <description>The traffic_light_plugin package</description>
  <maintainer email="rares.lemnariu@ro.bosch.com"> Rares Lemnariu </maintainer>
  <license>Bosch ECC</license>
 
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gz-sim8</build_depend>
  <build_depend>gz-plugin2</build_depend>
  <build_depend>gz-math7</build_depend>
  
  <build_export_depend>rclcpp</build_export_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gz-sim8</exec_depend>
  <exec_depend>gz-plugin2</exec_depend>
  <exec_depend>gz-math7</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
